i had done some changes in the code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Mini E-commerce</title>
   <link rel="stylesheet" href="site.css" />
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
+
 </head>
 <body>
   <header class="site-header">
