i just change my name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container header-inner">
       <div class="logo">
         <img src="https://picsum.photos/80?random=1" alt="Logo" />
-        <span>ShopLite</span>
+        <span>OLUWALOSEYE</span>
       </div>
 
       <nav class="nav" id="nav">
