i just added my number to the contact and i added my mail too

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <!-- Contact -->
     <section id="contact" class="container contact">
-      <h2>Contact</h2>
-      <p>Email: hello@shoplite.example</p>
+      <h2>Contact: +2348116454074</h2>
+      <p>Email: omolanweshly@gmail.com</p>
     </section>
   </main>
 
